--- a/style.css
+++ b/style.css
@@ -2,18 +2,20 @@ body{
     font-family: 'Roboto Slab', serif;
     margin: 0;
 }
+
 h1{
     font-size: 50px;
 }
 .orange{
     color: orange;
 }
-section{
+.flexible-container{
     display: flex;
+    margin-bottom: 150px;
 }
 .half-width{
     width: 50%;
-    padding-left: 5%;
+    padding-left: 2%;
 }
 .half-width img{
     width: 80%;
